src/test/ui/consts/const-err-multi.stderr
error: any use of this value will cause an error
  --> $DIR/const-err-multi.rs:3:19
   |
LL | pub const A: i8 = -i8::MIN;
   | ------------------^^^^^^^^-
   |                   |
   |                   attempt to negate `i8::MIN`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/const-err-multi.rs:1:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/const-err-multi.rs:5:19
   |
LL | pub const B: i8 = A;
   | ------------------^-
   |                   |
   |                   referenced constant has errors

error: any use of this value will cause an error
  --> $DIR/const-err-multi.rs:7:19
   |
LL | pub const C: u8 = A as u8;
   | ------------------^-------
   |                   |
   |                   referenced constant has errors

error: any use of this value will cause an error
  --> $DIR/const-err-multi.rs:9:24
   |
LL | pub const D: i8 = 50 - A;
   | -----------------------^-
   |                        |
   |                        referenced constant has errors

error: aborting due to 4 previous errors

